# aivtube

./: .env.example  .gitignore  CLAUDE.md  PLAN.md  README.md  plan.html  pyproject.toml
backend/: server.py
backend/brain/: __init__.py  brain.py  cli.py  persona.py  test_parser.py
backend/voice/: __init__.py  tts.py
docs/: CLAUDE_COMPUTER_USE_PROMPT.md  RIG_ON_MAC.md
tools/: build_model_psd.py
