[project]
name = "aivtube"
version = "0.1.0"
description = "AGI-chan — an autonomous AI VTuber representing aligned AGI, talking AI safety."
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.40",
    "python-dotenv>=1.0",
    "edge-tts>=7.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*"]
